--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 
     <!-- Required Meta Tags -->
     <meta charset="utf-8" />
+
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <meta
       name="description"
@@ -58,7 +59,7 @@
   <body class="layout-wide">
     <!-- Loader -->
     <div class="loader bg-dark">
-      <div class="spinner-grow text-primary" role="status">
+      <div class="spinner-grow loader-color" role="status">
         <span class="sr-only">Loading...</span>
       </div>
     </div>
@@ -140,7 +141,7 @@
     </div>
 
     <!-- Fullpage content -->
-    <div class="ln-fullpage" data-navigation="true">
+    <div class="" data-navigation="true">
       <!-- Section - Home -->
       <section
         class="ln-section d-flex min-vh-100"
@@ -383,7 +384,7 @@
           >
             :خدماتنا
           </h2>
-          <div class="grid-container font-almarai">
+          <div class="grid-container-ar font-almarai">
             <div
               class="custom-container animated"
               data-animation="fadeInUp"
@@ -527,7 +528,7 @@
           class="container align-self-center theme-color-2 align-right-text font-almarai"
         >
           <div class="row mb-7">
-            <div class="col-12 col-xl-6">
+            <div class="col-12vi">
               <h2 class="font-almarai">اتصل بنا</h2>
               <p data-animation-delay="150 ">
                 تريد أن تقول مرحبا؟ تريد ان تعرف المزيد عنا؟ اتصل بنا أو أرسل
@@ -539,7 +540,7 @@
             <div class="col-12 col-lg-5 mb-8 mb-lg-0">
               <div class="row">
                 <div
-                  class="col-12 col-md-4 col-lg-6 mb-8 mb-md-0 mb-lg-5 align-left-text"
+                  class="col-12 col-md-4 col-lg-6 mb-8 mb-md-0 mb-lg-5 align-right-text"
                 >
                   <div class="icon-5x text-primary mb-4">
                     <i class="ti-mobile theme-color" theme-color></i>
@@ -557,15 +558,15 @@
                   </p>
                 </div>
 
-                <div class="col-12 col-md-4 col-lg-6 align-left-text">
+                <div class="col-12 col-md-4 col-lg-6 align-right-text">
                   <div class="icon-5x text-primary mb-4">
                     <i class="ti-email theme-color"></i>
                   </div>
-                  <p class="mb-0 align-left-text">
+                  <p class="mb-0">
                     <a href="mailto:support@atrnj.co" class="theme-color-2"
-                      >support@atrnj.co</a
+                      >support@atrnj.com</a
                     ><br />
-                    <a href="mailto:hello@atrjn.com" class="theme-color-2 "
+                    <a href="mailto:hello@atrjn.com" class="theme-color-2"
                       >hello@atrjn.com</a
                     >
                   </p>
