--- a/en.html
+++ b/en.html
@@ -54,7 +54,7 @@
   <body class="layout-wide">
     <!-- Loader -->
     <div class="loader bg-dark">
-      <div class="spinner-grow text-primary" role="status">
+      <div class="spinner-grow loader-color" role="status">
         <span class="sr-only">Loading...</span>
       </div>
     </div>
@@ -487,7 +487,7 @@
             <div class="col-12 col-lg-5 mb-8 mb-lg-0">
               <div class="row">
                 <div class="col-12 col-md-4 col-lg-6 mb-8 mb-md-0 mb-lg-5">
-                  <div class="icon-5x text-primary mb-4">
+                  <div class="icon-5x text-primary mb-4 ">
                     <i class="ti-mobile theme-color" theme-color></i>
                   </div>
                   <p class="mb-0">
@@ -507,14 +507,14 @@
 
                 <div class="col-12 col-md-4 col-lg-6">
                   <div class="icon-5x text-primary mb-4">
-                    <i class="ti-email theme-color"></i>
+                    <i class="ti-email theme-color"></i> 
                   </div>
                   <p class="mb-0">
                     <a href="mailto:support@atrnj.co" class="theme-color-2"
-                      >support@atrnj.co</a
+                      >support@atrnj.com</a
                     ><br />
                     <a href="mailto:hello@atrnj.co" class="theme-color-2"
-                      >hello@atrnj.co</a
+                      >hello@atrnj.com</a
                     >
                   </p>
                 </div>
