--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       data-navbar-scrolled="navbar-light"
     >
       <!-- Brand -->
-      <a class="navbar-brand" href="#home">
+      <a class="navbar-brand margin-left-5" href="#home">
         <img src="assets/images/logo.svg" class="navbar-brand-img" alt="logo" />
       </a>
 
@@ -92,7 +92,7 @@
       </button>
 
       <!-- Collapse -->
-      <div class="collapse navbar-collapse font-almarai" id="navbarCollapse">
+      <div class="collapse navbar-collapse font-almarai margin-right-5" id="navbarCollapse">
         <!-- Navigation -->
         <ul class="navbar-nav ml-auto" id="navigation">
           <li class="nav-item" data-menuanchor="home">
@@ -516,7 +516,86 @@
         </div>
       </section>
       <!-- Section - Our work -->
+      <section
+      class="ln-section d-xl-flex theme-color-3"
+      data-anchor="partners"
+      data-tooltip="partners"
+      data-ui="dark"
+      data-navbar="navbar-light"
+    >
+      <div class="container align-self-center theme-color-2">
+        <h2 class="mb-4 animated title align-right-text font-almarai " data-animation="fadeInUp">
+          :شركاء النجاح
+        </h2>
+        <div class="grid-container-ar">
+          <div class="partners-container padding-0">
+            <img
+              class="image-partners"
+              src="assets/images/partners/raza.webp"
+              alt=""
+            />
+          </div>
+          <div class="partners-container">
+            <img
+              class="image-partners"
+              src="assets/images/partners/gaca.jpg"
+              alt=""
+            />
+          </div>
 
+          <div class="partners-container">
+            <img
+              class="image-partners"
+              src="assets/images/partners/MOH.jpg"
+              alt=""
+            />
+          </div>
+
+  
+          <div class="partners-container">
+            <img
+              class="image-partners"
+              src="assets/images/partners/sca-comprossed.jpg"
+              alt=""
+            />
+          </div>
+
+            <div class="partners-container">
+            <img
+              class="image-partners"
+              src="assets/images/partners/study-group.jpg"
+              alt=""
+            />
+          </div>
+
+          
+          <div class="partners-container">
+            <img
+              class="image-partners"
+              src="assets/images/partners/servecrop-compressed.jpg"
+              alt=""
+            />
+          </div>
+
+          <div class="partners-container">
+            <img
+              class="image-partners"
+              src="assets/images/partners/gosi-compressed.jpg"
+              alt=""
+            />
+          </div>
+          
+
+          <div class="partners-container">
+            <img
+              class="image-partners"
+              src="assets/images/partners/hrdf.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </section>
       <section
         class="ln-section d-xl-flex theme-color-3"
         data-anchor="contact"
