--- a/en.html
+++ b/en.html
@@ -156,7 +156,14 @@
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide swiper-overlay">
-                  <video class="video " loop autoplay muted>
+                  <video
+                    id="video"
+                    class="video"
+                    loop
+                    autoplay
+                    muted
+                    playsinline
+                  >
                     <source
                       src="assets/video/main-video.mp4"
                       type="video/mp4"
@@ -499,7 +506,7 @@
       <!-- Section - Our work -->
 
       <section
-        class="ln-section d-xl-flex theme-color-3"
+        class="ln-section d-xl-flex black-color-dark"
         data-anchor="partners"
         data-tooltip="partners"
         data-ui="dark"
@@ -510,14 +517,14 @@
             Our partners:
           </h2>
           <div class="grid-container">
-            <div class="partners-container padding-0">
+            <div class="partners-container partners-container-overlay  padding-0">
               <img
-                class="image-partners"
+                class="image-partners "
                 src="assets/images/partners/raza.webp"
                 alt=""
               />
             </div>
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay padding-0">
               <img
                 class="image-partners"
                 src="assets/images/partners/gaca.jpg"
@@ -525,7 +532,7 @@
               />
             </div>
 
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay">
               <img
                 class="image-partners"
                 src="assets/images/partners/MOH.jpg"
@@ -533,7 +540,7 @@
               />
             </div>
 
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay">
               <img
                 class="image-partners"
                 src="assets/images/partners/sca-comprossed.jpg"
@@ -541,7 +548,7 @@
               />
             </div>
 
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay ">
               <img
                 class="image-partners"
                 src="assets/images/partners/study-group.jpg"
@@ -549,7 +556,7 @@
               />
             </div>
 
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay">
               <img
                 class="image-partners"
                 src="assets/images/partners/servecrop-compressed.jpg"
@@ -557,7 +564,7 @@
               />
             </div>
 
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay">
               <img
                 class="image-partners"
                 src="assets/images/partners/gosi-compressed.jpg"
@@ -565,7 +572,7 @@
               />
             </div>
 
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay">
               <img
                 class="image-partners"
                 src="assets/images/partners/hrdf.jpg"
@@ -782,6 +789,44 @@
             </div> -->
           </div>
           <nav class="ln-social-icons">
+            <ul class="mx-auto">
+              <li>
+                <a target="_blank" href="https://www.tiktok.com/@atrnj_co"
+                  ><i class="fab tiktok-icon"
+                    ><img
+                      class="tiktok-icon"
+                      src="assets/images/icon/tiktok.svg"
+                      alt="" /></i
+                ></a>
+              </li>
+              <li>
+                <a target="_blank" href="https://www.instagram.com/atrnj_co/"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  target="_blank"
+                  href="https://www.snapchat.com/add/atrnj.co?share_id=xPW243oYeYg&locale=en-GB"
+                  ><i class="fab fa-snapchat"></i
+                ></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+
+      <section
+        class="ln-section d-xl-flex black-color-dark"
+        data-anchor="end"
+        data-tooltip="end"
+        data-ui="dark"
+        data-navbar="navbar-light"
+      >
+        <div class="width-100">
+          <p class="copyright-text">All rights reserved</p>
+          <p class="copyright-text">© 2023 ATRNJ</p>
+          <nav class="icons-end">
             <ul class="mx-auto">
               <li>
                 <a target="_blank" href="https://www.tiktok.com/@atrnj_co"
