--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide swiper-overlay">
-                  <video class="video" loop autoplay muted>
+                  <video id="video" class="video" loop autoplay muted playsinline>
                     <source
                       src="assets/video/main-video.mp4"
                       type="video/mp4"
