--- a/index.html
+++ b/index.html
@@ -551,28 +551,25 @@
       </section>
       <!-- Section - Our work -->
       <section
-        class="ln-section d-xl-flex theme-color-3"
+        class="ln-section d-xl-flex black-color-dark"
         data-anchor="partners"
         data-tooltip="partners"
         data-ui="dark"
         data-navbar="navbar-light"
       >
         <div class="container align-self-center theme-color-2">
-          <h2
-            class="mb-4 animated title align-right-text font-almarai"
-            data-animation="fadeInUp"
-          >
-            :شركاء النجاح
+          <h2 class="mb-4 animated title" data-animation="fadeInUp">
+            Our partners:
           </h2>
-          <div class="grid-container-ar">
-            <div class="partners-container padding-0">
+          <div class="grid-container">
+            <div class="partners-container partners-container-overlay  padding-0">
               <img
-                class="image-partners"
+                class="image-partners "
                 src="assets/images/partners/raza.webp"
                 alt=""
               />
             </div>
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay padding-0">
               <img
                 class="image-partners"
                 src="assets/images/partners/gaca.jpg"
@@ -580,7 +577,7 @@
               />
             </div>
 
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay">
               <img
                 class="image-partners"
                 src="assets/images/partners/MOH.jpg"
@@ -588,7 +585,7 @@
               />
             </div>
 
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay">
               <img
                 class="image-partners"
                 src="assets/images/partners/sca-comprossed.jpg"
@@ -596,7 +593,7 @@
               />
             </div>
 
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay ">
               <img
                 class="image-partners"
                 src="assets/images/partners/study-group.jpg"
@@ -604,7 +601,7 @@
               />
             </div>
 
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay">
               <img
                 class="image-partners"
                 src="assets/images/partners/servecrop-compressed.jpg"
@@ -612,7 +609,7 @@
               />
             </div>
 
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay">
               <img
                 class="image-partners"
                 src="assets/images/partners/gosi-compressed.jpg"
@@ -620,7 +617,7 @@
               />
             </div>
 
-            <div class="partners-container">
+            <div class="partners-container partners-container-overlay">
               <img
                 class="image-partners"
                 src="assets/images/partners/hrdf.jpg"
@@ -866,6 +863,43 @@
           </nav>
         </div>
       </section>
+      <section
+      class="ln-section d-xl-flex black-color-dark"
+      data-anchor="end"
+      data-tooltip="end"
+      data-ui="dark"
+      data-navbar="navbar-light"
+    >
+      <div class="width-100">
+        <p class="copyright-text">All rights reserved</p>
+        <p class="copyright-text">© 2023 ATRNJ</p>
+        <nav class="icons-end">
+          <ul class="mx-auto">
+            <li>
+              <a target="_blank" href="https://www.tiktok.com/@atrnj_co"
+                ><i class="fab tiktok-icon"
+                  ><img
+                    class="tiktok-icon"
+                    src="assets/images/icon/tiktok.svg"
+                    alt="" /></i
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://www.instagram.com/atrnj_co/"
+                ><i class="fab fa-instagram"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                target="_blank"
+                href="https://www.snapchat.com/add/atrnj.co?share_id=xPW243oYeYg&locale=en-GB"
+                ><i class="fab fa-snapchat"></i
+              ></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </section>
     </div>
 
     <!-- Libs JS -->
